--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js",
-    "start:prod": "pm2 start index.js --name chatwoot-integration"
-  },
+  "start": "node server.js",
+  "dev": "set NODE_ENV=DEVELOPMENT && node server",
+  "prod": "set NODE_ENV=PRODUCTION && node server"
+}
   "engines": {
     "node": ">=18.0.0"
   },
