--- a/package.json
+++ b/package.json
@@ -3,18 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-  "start": "node server.js",
-  "dev": "set NODE_ENV=DEVELOPMENT && node server",
-  "prod": "set NODE_ENV=PRODUCTION && node server"
-},
+    "start": "node server.js",  // Start in production without environment variables
+    "dev": "cross-env NODE_ENV=DEVELOPMENT node server.js",  // Development environment
+    "prod": "cross-env NODE_ENV=PRODUCTION pm2 start server.js --name chatwoot-integration"  // Production with PM2
+  },
   "engines": {
     "node": ">=18.0.0"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "description": "",
   "dependencies": {
     "axios": "^1.7.9",
     "cors": "^2.8.5",
@@ -22,6 +17,7 @@
     "express": "^4.21.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "cross-env": "^7.0.3" 
   }
 }
